fix collapse on small devices

--- a/components/nav/nav.styl
+++ b/components/nav/nav.styl
@@ -59,7 +59,7 @@ nav.nav
 .nav_logo
   flex-grow 1
   flex-basis 0%
-  min-width 130px
+  min-width 200px
   text-align center
 
   div
@@ -68,7 +68,7 @@ nav.nav
   .nav_logo-type
     svg
       height 4em
-      width 9em
+      width 8em
       fill white
   .nav_logo-mark
     vertical-align top
